--- a/webserver/styles.css
+++ b/webserver/styles.css
@@ -23,16 +23,16 @@ body {
 }
 
 .nav-title {
-    text-decoration: none; 
-    color: white; 
+    text-decoration: none;
+    color: white;
     font-size: 1.8rem;
     font-weight: bold;
-    cursor: pointer; 
+    cursor: pointer;
 }
 
 .nav-title:hover {
-    color: #beddfe; 
-}    
+    color: #beddfe;
+}
 
 .navbar .nav-links {
     list-style: none;
@@ -75,7 +75,8 @@ body {
     color: #333;
 }
 
-.modal input[type="text"], .modal input[type="password"] {
+.modal input[type="text"],
+.modal input[type="password"] {
     width: 100%;
     padding: 12px;
     margin: 15px 0;
@@ -87,7 +88,8 @@ body {
     box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.05);
 }
 
-.modal button, .modal input[type="submit"] {
+.modal button,
+.modal input[type="submit"] {
     width: 100%;
     padding: 12px;
     background-color: #007BFF;
@@ -100,7 +102,8 @@ body {
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
 
-.modal button:hover, .modal input[type="submit"]:hover {
+.modal button:hover,
+.modal input[type="submit"]:hover {
     background-color: #0056b3;
 }
 
@@ -110,6 +113,7 @@ body {
         opacity: 0;
         transform: scale(0.9);
     }
+
     to {
         opacity: 1;
         transform: scale(1);
@@ -159,7 +163,7 @@ body {
 .vote-average {
     font-size: 1.5rem;
     font-weight: bold;
-    color: #FFD700; 
+    color: #FFD700;
     margin-left: 10px;
     background-color: #007BFF;
     padding: 5px 10px;
@@ -169,7 +173,7 @@ body {
 }
 
 .vote-average .fa-star {
-    color: #FFD700; 
+    color: #FFD700;
     margin-left: 5px;
     font-size: 1.3rem;
 }
@@ -184,6 +188,7 @@ body {
     color: #007BFF;
     margin-bottom: 20px;
 }
+
 .carousel-container {
     position: relative;
     max-width: 100%;
@@ -214,7 +219,7 @@ body {
     top: 0;
     bottom: 0;
     width: 50px;
-    height:81%;
+    height: 81%;
     border-radius: 10px;
     background-color: rgba(0, 0, 0, 0.5);
     color: white;
@@ -260,6 +265,7 @@ body {
 .overlay.active {
     display: flex;
 }
+
 /* Pagination Controls */
 .pagination-controls {
     display: flex;
@@ -291,6 +297,7 @@ body {
     font-size: 1.2rem;
     color: #333;
 }
+
 /* Filters and Search Bar */
 .filters {
     display: flex;
@@ -401,6 +408,7 @@ body {
     font-size: 1rem;
     color: #333;
 }
+
 /*Trivia*/
 .trivia-selection {
     text-align: center;
@@ -522,6 +530,56 @@ body {
 
 .score-content button:hover {
     background-color: #0056b3;
+}
+
+/*Home Page */
+
+.welcome-message {
+    text-align: center;
+    margin: 20px;
+}
+
+.welcome-message h1 {
+    font-size: 2.5rem;
+    color: #333;
+}
+
+.welcome-message p {
+    font-size: 1.2rem;
+    color: #555;
+}
+
+.trending-movies {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    padding: 20px;
+}
+.movie-item {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    width: 200px;
+    text-decoration: none;
+}
+
+.movie-item img {
+    max-width: 100%;
+    border-radius: 10px;
+    margin-bottom: 10px;
+}
+
+.movie-item p {
+    font-size: 1rem;
+    color: #333;
+    text-decoration: none;
+}
+.movie-item a {
+
+    text-decoration: none;
 }
 /* Responsive Design */
 @media screen and (max-width: 768px) {
