--- a/styles.css
+++ b/styles.css
@@ -251,6 +251,7 @@ body {
     background-color: #0056b3;
     transform: scale(1.05);
 }
+
 /* Carousel button styling */
 .carousel-button {
     position: absolute;
@@ -944,3 +945,88 @@ body {
     margin-bottom: 20px;
 }
 
+/* Search Container */
+.search-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+}
+
+#actor-search-bar {
+    padding: 10px;
+    font-size: 1rem;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    width: 300px;
+}
+
+#actor-search-results {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    padding:0 50px;
+}
+
+.actor-item {
+    cursor: pointer;
+    transition: transform 0.3s ease;
+    text-align: center;
+}
+
+.actor-item:hover {
+    transform: scale(1.05);
+}
+
+.actor-item img {
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.actor-item p {
+    margin-top: 10px;
+    font-size: 1rem;
+    color: #333;
+}
+
+/* Movie Recommendations */
+.movie-recommendations {
+    padding: 20px;
+    text-align: center;
+}
+
+.movie-recommendations h2 {
+    font-size: 2rem;
+    color: #007BFF;
+    margin-bottom: 20px;
+}
+
+.movie-recommendation-item {
+    display: inline-block;
+    margin: 10px;
+    text-align: center;
+}
+
+.movie-recommendation-item img {
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.movie-recommendation-item p {
+    margin-top: 10px;
+    font-size: 1rem;
+    color: #333;
+}
+.actor-item.selected {
+    opacity: 1;
+}
+
+.actor-item.not-selected {
+    opacity: .5;
+}
