--- a/styles.css
+++ b/styles.css
@@ -1030,3 +1030,99 @@ body {
 .actor-item.not-selected {
     opacity: .5;
 }
+
+/* Hamburger Button */
+.hamburger {
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 21px;
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+.hamburger .bar {
+    height: 3px;
+    width: 100%;
+    background-color: #fff;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+}
+
+.menu {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.menu ul {
+    display: flex;
+    gap: 20px;
+}
+
+.menu.open ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    top: 70px;
+    left: 0;
+    width: 100%;
+    background-color: #007BFF;
+    padding: 20px 0;
+    z-index: 200;
+}
+
+.menu ul li {
+    margin: 10px 0;
+}
+
+.menu ul li button {
+    width: 100%;
+}
+
+.menu.open ul li {
+    text-align: center;
+}
+
+.menu.open ul li button {
+    width: auto;
+}
+
+.menu.open .nav-title {
+    display: none;
+}
+
+@media screen and (max-width: 768px) {
+    .hamburger {
+        display: flex;
+    }
+
+    .menu ul {
+        display: none;
+        flex-direction: column;
+    }
+
+    .menu.open ul {
+        display: flex;
+    }
+
+    .menu.open ul li {
+        text-align: center;
+    }
+
+    .menu ul li button {
+        width: 100%;
+    }
+
+    .navbar {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .navbar .nav-links {
+        display: none;
+    }
+}
